--- a/shootgame/app/src/main/res/values/strings.xml
+++ b/shootgame/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">shootgame</string>
+    <string name="app_name">飞机大战</string>
     <string name="action_settings">Settings</string>
 </resources>
